<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jkkv.scribble.Canvas">


    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:theme="@style/AppTheme.AppBarOverlay">-->

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:background="?attr/colorPrimaryDark"-->
            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    <!--</android.support.design.widget.AppBarLayout>-->


    <jkkv.scribble.OnDraw
        android:id="@+id/actualCanvas"
        android:layout_width = "match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="470dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_home"
        android:visibility="invisible"
        app:backgroundTint="@android:color/background_light" />

        <android.support.design.widget.FloatingActionButton
           android:id="@+id/reflection"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom|end"
           android:layout_marginBottom="420dp"
           android:layout_marginEnd="16dp"
           android:src="@drawable/ic_broken_image"
           android:visibility="invisible"
           app:backgroundTint="@android:color/background_light" />

        <android.support.design.widget.FloatingActionButton
           android:id="@+id/color"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom|end"
           android:layout_marginBottom="370dp"
           android:layout_marginEnd="16dp"
           android:src="@drawable/ic_palette"
           android:visibility="invisible"
           app:backgroundTint="@android:color/background_light" />


        <android.support.design.widget.FloatingActionButton
           android:id="@+id/background"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom|end"
           android:layout_marginBottom="320dp"
           android:layout_marginEnd="16dp"
           android:src="@drawable/ic_image"
           android:visibility="invisible"
           app:backgroundTint="@android:color/background_light"
           app:rippleColor="@android:drawable/screen_background_dark_transparent" />

        <android.support.design.widget.FloatingActionButton
           android:id="@+id/paintbrush"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom|end"
           android:layout_marginBottom="270dp"
           android:layout_marginEnd="16dp"
           android:src="@drawable/ic_brush"
           android:visibility="invisible"
           app:backgroundTint="@android:color/background_light" />

        <android.support.design.widget.FloatingActionButton
           android:id="@+id/eraser"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom|end"
           android:layout_marginBottom="220dp"
           android:layout_marginEnd="16dp"
           android:src="@drawable/ic_remove"
           android:visibility="invisible"
           app:backgroundTint="@android:color/background_light" />

        <android.support.design.widget.FloatingActionButton
           android:id="@+id/movinghand"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom|end"
           android:layout_marginBottom="170dp"
           android:layout_marginEnd="16dp"
           android:src="@drawable/ic_zoom_out_map"
           android:visibility="invisible"
           app:backgroundTint="@android:color/background_light" />

        <android.support.design.widget.FloatingActionButton
           android:id="@+id/port"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom|end"
           android:layout_marginBottom="120dp"
           android:layout_marginEnd="16dp"
           android:src="@drawable/ic_arrow_downward"
           android:visibility="invisible"
           app:backgroundTint="@android:color/background_light" />

        <android.support.design.widget.FloatingActionButton
           android:id="@+id/draw"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom|end"
           android:layout_marginBottom="70dp"
           android:layout_marginEnd="@dimen/fab_margin"
           android:src="@drawable/ic_draw"
           android:visibility="invisible"
           app:backgroundTint="@android:color/background_light" />

        <android.support.design.widget.FloatingActionButton
           android:id="@+id/menu"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom|end"
           android:layout_margin="@dimen/fab_margin"
           android:src="@drawable/ic_menu"
           app:backgroundTint="@android:color/background_light" />



   </android.support.design.widget.CoordinatorLayout>
