<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jkkv.scribble.Canvas">

    <TextView
        android:id="@+id/current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="470dp"
        android:fontFamily="modern"
        android:textSize="22sp"
        android:text="Your Current Color Is"
        android:textStyle="bold"  />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/yourColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="400dp"
        app:fabSize="normal"
        app:backgroundTint="#ffffff" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="270dp"
        android:layout_marginEnd="-200dp"
        app:backgroundTint="#00ffff"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="270dp"
        android:layout_marginEnd="-100dp"
        app:backgroundTint="#cc99ff"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="270dp"
        app:backgroundTint="#ffcccc"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="270dp"
        android:layout_marginEnd="100dp"
        app:backgroundTint="#ffffcc"
        app:fabSize="mini"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="270dp"
        android:layout_marginEnd="200dp"
        app:backgroundTint="#ffffff"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="220dp"
        android:layout_marginEnd="-200dp"
        app:backgroundTint="#00ccff"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="220dp"
        android:layout_marginEnd="-100dp"
        app:backgroundTint="#a64dff"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="220dp"
        app:backgroundTint="#ff6666"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="220dp"
        android:layout_marginEnd="100dp"
        app:backgroundTint="#ffff00"
        app:fabSize="mini"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="220dp"
        android:layout_marginEnd="200dp"
        app:backgroundTint="#ccffcc"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="170dp"
        android:layout_marginEnd="-200dp"
        app:backgroundTint="#0052cc"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="170dp"
        android:layout_marginEnd="-100dp"
        app:backgroundTint="#8000ff"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="170dp"
        app:backgroundTint="#ff0000"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="170dp"
        android:layout_marginEnd="100dp"
        app:backgroundTint="#ffcc00"
        app:fabSize="mini"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="170dp"
        android:layout_marginEnd="200dp"
        app:backgroundTint="#66ff66"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
    android:id="@+id/color16"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:layout_marginBottom="120dp"
    android:layout_marginEnd="-200dp"
    app:backgroundTint="#0000cc"
    app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="-100dp"
        app:backgroundTint="#5900b3"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="120dp"
        app:backgroundTint="#cc0000"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="100dp"
        app:backgroundTint="#cc9900"
        app:fabSize="mini"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="200dp"
        app:backgroundTint="#009933"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="-200dp"
        app:backgroundTint="#000000"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="-100dp"
        app:backgroundTint="#330066"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="70dp"
        app:backgroundTint="#800000"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="100dp"
        app:backgroundTint="#663300"
        app:fabSize="mini"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="200dp"
        app:backgroundTint="#004d00"
        app:fabSize="mini" />
</android.support.design.widget.CoordinatorLayout>